@@ -3,3 +3,4 @@ require 'double_agent/parser'
 require 'double_agent/resources'
 require 'double_agent/stats'
 require 'double_agent/logs'
+require 'double_agent/graphs'
